more census work

--- a/in_progress/census/state_focus.ipynb
+++ b/in_progress/census/state_focus.ipynb
@@ -562,247 +562,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 93,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CensusTract</th>\n",
-       "      <th>State</th>\n",
-       "      <th>County</th>\n",
-       "      <th>TotalPop</th>\n",
-       "      <th>Men</th>\n",
-       "      <th>Women</th>\n",
-       "      <th>Hispanic</th>\n",
-       "      <th>White</th>\n",
-       "      <th>Black</th>\n",
-       "      <th>Native</th>\n",
-       "      <th>...</th>\n",
-       "      <th>PublicWork</th>\n",
-       "      <th>SelfEmployed</th>\n",
-       "      <th>FamilyWork</th>\n",
-       "      <th>Unemployment</th>\n",
-       "      <th>Hispanic_pop</th>\n",
-       "      <th>White_pop</th>\n",
-       "      <th>Black_pop</th>\n",
-       "      <th>Native_pop</th>\n",
-       "      <th>Asian_pop</th>\n",
-       "      <th>Pacific_pop</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>33956</th>\n",
-       "      <td>26099982300</td>\n",
-       "      <td>Michigan</td>\n",
-       "      <td>Macomb</td>\n",
-       "      <td>69</td>\n",
-       "      <td>69</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6900.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37386</th>\n",
-       "      <td>28121020500</td>\n",
-       "      <td>Mississippi</td>\n",
-       "      <td>Rankin</td>\n",
-       "      <td>4651</td>\n",
-       "      <td>3204</td>\n",
-       "      <td>1447</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>45.2</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>...</td>\n",
-       "      <td>33.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>3255.7</td>\n",
-       "      <td>210225.2</td>\n",
-       "      <td>241852.0</td>\n",
-       "      <td>7906.7</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45281</th>\n",
-       "      <td>36055980100</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>Monroe</td>\n",
-       "      <td>18</td>\n",
-       "      <td>7</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>83.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1499.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>300.6</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>56262</th>\n",
-       "      <td>42027981202</td>\n",
-       "      <td>Pennsylvania</td>\n",
-       "      <td>Centre</td>\n",
-       "      <td>2292</td>\n",
-       "      <td>2281</td>\n",
-       "      <td>11</td>\n",
-       "      <td>17.8</td>\n",
-       "      <td>35.7</td>\n",
-       "      <td>43.6</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>...</td>\n",
-       "      <td>45.5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>40797.6</td>\n",
-       "      <td>81824.4</td>\n",
-       "      <td>99931.2</td>\n",
-       "      <td>687.6</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58138</th>\n",
-       "      <td>42101989100</td>\n",
-       "      <td>Pennsylvania</td>\n",
-       "      <td>Philadelphia</td>\n",
-       "      <td>3145</td>\n",
-       "      <td>2559</td>\n",
-       "      <td>586</td>\n",
-       "      <td>17.1</td>\n",
-       "      <td>13.7</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>77.3</td>\n",
-       "      <td>53779.5</td>\n",
-       "      <td>43086.5</td>\n",
-       "      <td>210715.0</td>\n",
-       "      <td>629.0</td>\n",
-       "      <td>4403.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>61398</th>\n",
-       "      <td>47157980100</td>\n",
-       "      <td>Tennessee</td>\n",
-       "      <td>Shelby</td>\n",
-       "      <td>64</td>\n",
-       "      <td>40</td>\n",
-       "      <td>24</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>59.4</td>\n",
-       "      <td>40.6</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3801.6</td>\n",
-       "      <td>2598.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6 rows × 43 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       CensusTract         State        County  TotalPop   Men  Women  \\\n",
-       "33956  26099982300      Michigan        Macomb        69    69      0   \n",
-       "37386  28121020500   Mississippi        Rankin      4651  3204   1447   \n",
-       "45281  36055980100      New York        Monroe        18     7     11   \n",
-       "56262  42027981202  Pennsylvania        Centre      2292  2281     11   \n",
-       "58138  42101989100  Pennsylvania  Philadelphia      3145  2559    586   \n",
-       "61398  47157980100     Tennessee        Shelby        64    40     24   \n",
-       "\n",
-       "       Hispanic  White  Black  Native     ...       PublicWork  SelfEmployed  \\\n",
-       "33956       0.0  100.0    0.0     0.0     ...              0.0           0.0   \n",
-       "37386       0.7   45.2   52.0     1.7     ...             33.3           0.0   \n",
-       "45281       0.0   83.3    0.0     0.0     ...              0.0           0.0   \n",
-       "56262      17.8   35.7   43.6     0.3     ...             45.5           0.0   \n",
-       "58138      17.1   13.7   67.0     0.2     ...              0.0           0.0   \n",
-       "61398       0.0   59.4   40.6     0.0     ...              0.0           0.0   \n",
-       "\n",
-       "       FamilyWork  Unemployment  Hispanic_pop  White_pop  Black_pop  \\\n",
-       "33956         0.0           0.0           0.0     6900.0        0.0   \n",
-       "37386         0.0           4.5        3255.7   210225.2   241852.0   \n",
-       "45281         0.0           0.0           0.0     1499.4        0.0   \n",
-       "56262         0.0           0.0       40797.6    81824.4    99931.2   \n",
-       "58138         0.0          77.3       53779.5    43086.5   210715.0   \n",
-       "61398         0.0           0.0           0.0     3801.6     2598.4   \n",
-       "\n",
-       "       Native_pop  Asian_pop  Pacific_pop  \n",
-       "33956         0.0        0.0          0.0  \n",
-       "37386      7906.7        0.0          0.0  \n",
-       "45281         0.0      300.6          0.0  \n",
-       "56262       687.6        0.0          0.0  \n",
-       "58138       629.0     4403.0          0.0  \n",
-       "61398         0.0        0.0          0.0  \n",
-       "\n",
-       "[6 rows x 43 columns]"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "census[census.Carpool == max(census.Carpool)]"
+    "['PrivateWork', 'PublicWork']"
    ]
   },
   {
@@ -817,6 +589,52 @@
     "       'WorkAtHome', 'MeanCommute', 'Employed', 'PrivateWork', 'PublicWork',\n",
     "       'SelfEmployed', 'FamilyWork', 'Unemployment']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "too many indices for array",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-100-708f41fe3038>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcensus\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"State\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0msns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfactorplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mjobs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"State\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m13\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxarr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;31m# data.iloc[13:26].plot(kind=\"bar\", ax=axarr[0,1])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# data.iloc[26:39].plot(kind=\"bar\", ax=axarr[1,0])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: too many indices for array"
+     ]
+    }
+   ],
+   "source": [
+    "jobs = ['Professional', 'Service', 'Office', 'Construction', 'Production']\n",
+    "\n",
+    "data = census.groupby(\"State\")[jobs]\n",
+    "\n",
+    "sns.barplot(data.head(13)ax=axarr[0,0])\n",
+    "# data.iloc[13:26].plot(kind=\"bar\", ax=axarr[0,1])\n",
+    "# data.iloc[26:39].plot(kind=\"bar\", ax=axarr[1,0])\n",
+    "# _ = data.tail(13).plot(kind=\"bar\", ax=axarr[1,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
