--- a/in_progress/shelter/3_voting.ipynb
+++ b/in_progress/shelter/3_voting.ipynb
@@ -1541,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1570,7 +1570,7 @@
    "source": [
     "### SVC\n",
     "\n",
-    "WARNING: GridSearchCV takes forever!!\n",
+    "WARNING: GridSearchCV takes forever!!  (Like 2 hrs)\n",
     "\n",
     "tried\n",
     "\n",
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1597,8 +1597,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed: 83.1min\n"
+      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed: 83.1min\n",
+      "[Parallel(n_jobs=4)]: Done  84 out of  84 | elapsed: 502.7min finished\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.60068093385214005"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1619,11 +1630,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 200, 'gamma': 0.001, 'kernel': 'rbf'}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "gsSVMC.best_params_"
    ]
