looking at income errors possibily income inequality

--- a/in_progress/census/fun.ipynb
+++ b/in_progress/census/fun.ipynb
@@ -402,6 +402,256 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Largest income error\n",
+    "\n",
+    "The income given can be off by as much as 123,116"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63909    123116.0\n",
+      "Name: IncomeErr, dtype: float64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CensusTract</th>\n",
+       "      <th>State</th>\n",
+       "      <th>County</th>\n",
+       "      <th>TotalPop</th>\n",
+       "      <th>Men</th>\n",
+       "      <th>Women</th>\n",
+       "      <th>Hispanic</th>\n",
+       "      <th>White</th>\n",
+       "      <th>Black</th>\n",
+       "      <th>Native</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Walk</th>\n",
+       "      <th>OtherTransp</th>\n",
+       "      <th>WorkAtHome</th>\n",
+       "      <th>MeanCommute</th>\n",
+       "      <th>Employed</th>\n",
+       "      <th>PrivateWork</th>\n",
+       "      <th>PublicWork</th>\n",
+       "      <th>SelfEmployed</th>\n",
+       "      <th>FamilyWork</th>\n",
+       "      <th>Unemployment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>63909</th>\n",
+       "      <td>48201210100</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>Harris</td>\n",
+       "      <td>5799</td>\n",
+       "      <td>5299</td>\n",
+       "      <td>500</td>\n",
+       "      <td>33.5</td>\n",
+       "      <td>16.3</td>\n",
+       "      <td>48.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>118</td>\n",
+       "      <td>66.9</td>\n",
+       "      <td>28.8</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 37 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       CensusTract  State  County  TotalPop   Men  Women  Hispanic  White  \\\n",
+       "63909  48201210100  Texas  Harris      5799  5299    500      33.5   16.3   \n",
+       "\n",
+       "       Black  Native      ...       Walk  OtherTransp  WorkAtHome  \\\n",
+       "63909   48.6     0.0      ...        0.0          0.0         9.3   \n",
+       "\n",
+       "       MeanCommute  Employed  PrivateWork  PublicWork  SelfEmployed  \\\n",
+       "63909         33.0       118         66.9        28.8           4.2   \n",
+       "\n",
+       "       FamilyWork  Unemployment  \n",
+       "63909         0.0           0.0  \n",
+       "\n",
+       "[1 rows x 37 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_income_err = np.argmax(census.IncomeErr)\n",
+    "max_income_err = census[census.index == max_income_err]\n",
+    "\n",
+    "print(max_income_err.IncomeErr)\n",
+    "max_income_err"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Largest Income per cap error\n",
+    "\n",
+    "The per capita income can be off by as mu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27513    134380.0\n",
+      "Name: IncomePerCapErr, dtype: float64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CensusTract</th>\n",
+       "      <th>State</th>\n",
+       "      <th>County</th>\n",
+       "      <th>TotalPop</th>\n",
+       "      <th>Men</th>\n",
+       "      <th>Women</th>\n",
+       "      <th>Hispanic</th>\n",
+       "      <th>White</th>\n",
+       "      <th>Black</th>\n",
+       "      <th>Native</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Walk</th>\n",
+       "      <th>OtherTransp</th>\n",
+       "      <th>WorkAtHome</th>\n",
+       "      <th>MeanCommute</th>\n",
+       "      <th>Employed</th>\n",
+       "      <th>PrivateWork</th>\n",
+       "      <th>PublicWork</th>\n",
+       "      <th>SelfEmployed</th>\n",
+       "      <th>FamilyWork</th>\n",
+       "      <th>Unemployment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>27513</th>\n",
+       "      <td>21067003916</td>\n",
+       "      <td>Kentucky</td>\n",
+       "      <td>Fayette</td>\n",
+       "      <td>598</td>\n",
+       "      <td>282</td>\n",
+       "      <td>316</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>98.2</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>28.1</td>\n",
+       "      <td>315</td>\n",
+       "      <td>70.5</td>\n",
+       "      <td>15.9</td>\n",
+       "      <td>13.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 37 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       CensusTract     State   County  TotalPop  Men  Women  Hispanic  White  \\\n",
+       "27513  21067003916  Kentucky  Fayette       598  282    316       0.0   98.2   \n",
+       "\n",
+       "       Black  Native      ...       Walk  OtherTransp  WorkAtHome  \\\n",
+       "27513    1.5     0.0      ...        0.0          1.6         9.5   \n",
+       "\n",
+       "       MeanCommute  Employed  PrivateWork  PublicWork  SelfEmployed  \\\n",
+       "27513         28.1       315         70.5        15.9          13.7   \n",
+       "\n",
+       "       FamilyWork  Unemployment  \n",
+       "27513         0.0           6.8  \n",
+       "\n",
+       "[1 rows x 37 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_per_cap_err = np.argmax(census.IncomePerCapErr)\n",
+    "max_per_cap_err = census[census.index == max_per_cap_err]\n",
+    "\n",
+    "print(max_per_cap_err.IncomePerCapErr)\n",
+    "max_per_cap_err"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
