looking at income errors possibily income inequality

--- a/in_progress/census/fun.ipynb
+++ b/in_progress/census/fun.ipynb
@@ -532,7 +532,7 @@
    "source": [
     "### Largest Income per cap error\n",
     "\n",
-    "The per capita income can be off by as mu"
+    "The per capita income can be off by as much as 134,380.  I wonder if this indicates high income inequality"
    ]
   },
   {
