adding a corr map to census

--- a/in_progress/census/fun.ipynb
+++ b/in_progress/census/fun.ipynb
@@ -652,6 +652,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Santa Clara County"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "939004"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sc_county = census[census.County == \"Santa Clara\"]\n",
+    "\n",
+    "sc_county.Men.sum()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
