cleaned up shelter voting

--- a/in_progress/census/fun.ipynb
+++ b/in_progress/census/fun.ipynb
@@ -655,29 +655,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Santa Clara County"
+    "### Counties"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hispanic</th>\n",
+       "      <th>Median Commute</th>\n",
+       "      <th>Men</th>\n",
+       "      <th>Women</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Santa Clara</th>\n",
+       "      <td>497096.021</td>\n",
+       "      <td>25.90</td>\n",
+       "      <td>939004</td>\n",
+       "      <td>929145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>San Diego</th>\n",
+       "      <td>1060986.419</td>\n",
+       "      <td>25.00</td>\n",
+       "      <td>1618945</td>\n",
+       "      <td>1604151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Monterey</th>\n",
+       "      <td>243887.348</td>\n",
+       "      <td>21.90</td>\n",
+       "      <td>219299</td>\n",
+       "      <td>209142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alameda</th>\n",
+       "      <td>358167.652</td>\n",
+       "      <td>30.15</td>\n",
+       "      <td>776699</td>\n",
+       "      <td>808284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>San Francisco</th>\n",
+       "      <td>128619.425</td>\n",
+       "      <td>31.70</td>\n",
+       "      <td>427909</td>\n",
+       "      <td>412854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Contra Costa</th>\n",
+       "      <td>273359.785</td>\n",
+       "      <td>33.50</td>\n",
+       "      <td>534618</td>\n",
+       "      <td>561450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Los Angeles</th>\n",
+       "      <td>4842311.257</td>\n",
+       "      <td>29.80</td>\n",
+       "      <td>4945351</td>\n",
+       "      <td>5093037</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "939004"
+       "                  Hispanic  Median Commute      Men    Women\n",
+       "Santa Clara     497096.021           25.90   939004   929145\n",
+       "San Diego      1060986.419           25.00  1618945  1604151\n",
+       "Monterey        243887.348           21.90   219299   209142\n",
+       "Alameda         358167.652           30.15   776699   808284\n",
+       "San Francisco   128619.425           31.70   427909   412854\n",
+       "Contra Costa    273359.785           33.50   534618   561450\n",
+       "Los Angeles    4842311.257           29.80  4945351  5093037"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sc_county = census[census.County == \"Santa Clara\"]\n",
+    "counties = [\"Santa Clara\", \"San Diego\", \"Monterey\", \"Alameda\", \"San Francisco\", \"Contra Costa\", \"Los Angeles\"]\n",
     "\n",
-    "sc_county.Men.sum()"
+    "commute, men, women, hispanic = ([],[],[],[])\n",
+    "\n",
+    "for county in counties:\n",
+    "    curr_county = census[census.County == county]\n",
+    "\n",
+    "    commute.append(curr_county.MeanCommute.median())\n",
+    "    men.append(curr_county.Men.sum())\n",
+    "    women.append(curr_county.Women.sum())\n",
+    "    hispanic.append(((curr_county.Hispanic * curr_county.TotalPop) / 100).sum())\n",
+    "\n",
+    "pd.DataFrame({\n",
+    "    \"Women\": women,\n",
+    "    \"Men\": men,\n",
+    "    \"Median Commute\": commute,\n",
+    "    \"Hispanic\": hispanic\n",
+    "}, index=counties)"
    ]
   },
   {
