added voting c to shelter

--- a/in_progress/shelter/3_voting.ipynb
+++ b/in_progress/shelter/3_voting.ipynb
@@ -1632,7 +1632,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Predictions"
+    "### Averaging all the models"
    ]
   },
   {
@@ -1643,7 +1643,52 @@
    },
    "outputs": [],
    "source": [
-    "predictions = lgbm_model.predict(test_x)"
+    "test_etc  = pd.Series(etc_model.predict( test_x), name=\"ETC\")\n",
+    "test_rfc  = pd.Series(rfc_model.predict( test_x), name=\"RFC\")\n",
+    "test_gbc  = pd.Series(gbc_model.predict( test_x), name=\"GBC\")\n",
+    "test_svc  = pd.Series(svc_model.predict( test_x), name=\"SVC\")\n",
+    "test_xgb  = pd.Series(xgb_model.predict( test_x), name=\"XGB\")\n",
+    "test_lgbm = pd.Series(lgbm_model.predict(test_x), name=\"LGBM\")\n",
+    "\n",
+    "\n",
+    "# Concatenate all classifier results\n",
+    "ensemble_results = pd.concat([\n",
+    "                                test_etc,\n",
+    "                                test_rfc,\n",
+    "                                test_gbc,\n",
+    "                                test_svc,\n",
+    "                                test_xgb,\n",
+    "                                test_lgbm\n",
+    "                             ],axis=1)\n",
+    "\n",
+    "votingC = VotingClassifier(estimators=[\n",
+    "                                        (\"ETC\", test_etc),                                    \n",
+    "                                        (\"RFC\", test_rfc),\n",
+    "                                        (\"GBC\",test_gbc),\n",
+    "                                        (\"SVC\", test_svc),                                    \n",
+    "                                        (\"XGB\", test_xgb),\n",
+    "                                        (\"LGBM\", test_lgbm)\n",
+    "                                      ], voting='soft')\n",
+    "\n",
+    "votingC = votingC.fit(train_x, train_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predicting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "predictions = votingC.predict(test_x)"
    ]
   },
   {
