removed unnecessary code from titanic

--- a/in_progress/shelter/submission.ipynb
+++ b/in_progress/shelter/submission.ipynb
@@ -665,7 +665,7 @@
     "\n",
     "Let's look at the two columns closer\n",
     "\n",
-    "After looking it's interesting to note that 'Barn' is an OutcomeSubtype for both 'Adoption' and 'Transfer'"
+    "After looking it's interesting to note that 'Barn' is an OutcomeSubtype for both 'Adoption' and 'Transfer', also there's no 'Return_to_owner'"
    ]
   },
   {
