--- a/in_progress/census/fun.ipynb
+++ b/in_progress/census/fun.ipynb
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -684,78 +684,127 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Asian</th>\n",
+       "      <th>Black</th>\n",
        "      <th>Hispanic</th>\n",
        "      <th>Median Commute</th>\n",
        "      <th>Men</th>\n",
+       "      <th>Native</th>\n",
+       "      <th>Pacific</th>\n",
+       "      <th>White</th>\n",
        "      <th>Women</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Santa Clara</th>\n",
-       "      <td>497096.021</td>\n",
+       "      <td>626.084204</td>\n",
+       "      <td>45.044374</td>\n",
+       "      <td>497.096021</td>\n",
        "      <td>25.90</td>\n",
-       "      <td>939004</td>\n",
-       "      <td>929145</td>\n",
+       "      <td>939.004</td>\n",
+       "      <td>3.517091</td>\n",
+       "      <td>6.229886</td>\n",
+       "      <td>627.348056</td>\n",
+       "      <td>929.145</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>San Diego</th>\n",
-       "      <td>1060986.419</td>\n",
+       "      <td>362.505592</td>\n",
+       "      <td>153.028657</td>\n",
+       "      <td>1060.986419</td>\n",
        "      <td>25.00</td>\n",
-       "      <td>1618945</td>\n",
-       "      <td>1604151</td>\n",
+       "      <td>1618.945</td>\n",
+       "      <td>11.704634</td>\n",
+       "      <td>13.484862</td>\n",
+       "      <td>1515.345646</td>\n",
+       "      <td>1604.151</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Monterey</th>\n",
-       "      <td>243887.348</td>\n",
+       "      <td>25.217526</td>\n",
+       "      <td>10.976058</td>\n",
+       "      <td>243.887348</td>\n",
        "      <td>21.90</td>\n",
-       "      <td>219299</td>\n",
-       "      <td>209142</td>\n",
+       "      <td>219.299</td>\n",
+       "      <td>1.219249</td>\n",
+       "      <td>1.953637</td>\n",
+       "      <td>135.018274</td>\n",
+       "      <td>209.142</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Alameda</th>\n",
-       "      <td>358167.652</td>\n",
+       "      <td>436.266111</td>\n",
+       "      <td>179.375374</td>\n",
+       "      <td>358.167652</td>\n",
        "      <td>30.15</td>\n",
-       "      <td>776699</td>\n",
-       "      <td>808284</td>\n",
+       "      <td>776.699</td>\n",
+       "      <td>4.821192</td>\n",
+       "      <td>13.265241</td>\n",
+       "      <td>522.723766</td>\n",
+       "      <td>808.284</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>San Francisco</th>\n",
-       "      <td>128619.425</td>\n",
+       "      <td>281.876728</td>\n",
+       "      <td>44.899562</td>\n",
+       "      <td>128.619425</td>\n",
        "      <td>31.70</td>\n",
-       "      <td>427909</td>\n",
-       "      <td>412854</td>\n",
+       "      <td>427.909</td>\n",
+       "      <td>1.504401</td>\n",
+       "      <td>3.363267</td>\n",
+       "      <td>346.739781</td>\n",
+       "      <td>412.854</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Contra Costa</th>\n",
-       "      <td>273359.785</td>\n",
+       "      <td>165.354764</td>\n",
+       "      <td>94.061627</td>\n",
+       "      <td>273.359785</td>\n",
        "      <td>33.50</td>\n",
-       "      <td>534618</td>\n",
-       "      <td>561450</td>\n",
+       "      <td>534.618</td>\n",
+       "      <td>3.078708</td>\n",
+       "      <td>5.201260</td>\n",
+       "      <td>503.848967</td>\n",
+       "      <td>561.450</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Los Angeles</th>\n",
-       "      <td>4842311.257</td>\n",
+       "      <td>1401.446849</td>\n",
+       "      <td>801.753272</td>\n",
+       "      <td>4842.311257</td>\n",
        "      <td>29.80</td>\n",
-       "      <td>4945351</td>\n",
-       "      <td>5093037</td>\n",
+       "      <td>4945.351</td>\n",
+       "      <td>18.720465</td>\n",
+       "      <td>24.665115</td>\n",
+       "      <td>2703.669537</td>\n",
+       "      <td>5093.037</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  Hispanic  Median Commute      Men    Women\n",
-       "Santa Clara     497096.021           25.90   939004   929145\n",
-       "San Diego      1060986.419           25.00  1618945  1604151\n",
-       "Monterey        243887.348           21.90   219299   209142\n",
-       "Alameda         358167.652           30.15   776699   808284\n",
-       "San Francisco   128619.425           31.70   427909   412854\n",
-       "Contra Costa    273359.785           33.50   534618   561450\n",
-       "Los Angeles    4842311.257           29.80  4945351  5093037"
+       "                     Asian       Black     Hispanic  Median Commute       Men  \\\n",
+       "Santa Clara     626.084204   45.044374   497.096021           25.90   939.004   \n",
+       "San Diego       362.505592  153.028657  1060.986419           25.00  1618.945   \n",
+       "Monterey         25.217526   10.976058   243.887348           21.90   219.299   \n",
+       "Alameda         436.266111  179.375374   358.167652           30.15   776.699   \n",
+       "San Francisco   281.876728   44.899562   128.619425           31.70   427.909   \n",
+       "Contra Costa    165.354764   94.061627   273.359785           33.50   534.618   \n",
+       "Los Angeles    1401.446849  801.753272  4842.311257           29.80  4945.351   \n",
+       "\n",
+       "                  Native    Pacific        White     Women  \n",
+       "Santa Clara     3.517091   6.229886   627.348056   929.145  \n",
+       "San Diego      11.704634  13.484862  1515.345646  1604.151  \n",
+       "Monterey        1.219249   1.953637   135.018274   209.142  \n",
+       "Alameda         4.821192  13.265241   522.723766   808.284  \n",
+       "San Francisco   1.504401   3.363267   346.739781   412.854  \n",
+       "Contra Costa    3.078708   5.201260   503.848967   561.450  \n",
+       "Los Angeles    18.720465  24.665115  2703.669537  5093.037  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,23 +812,49 @@
    "source": [
     "counties = [\"Santa Clara\", \"San Diego\", \"Monterey\", \"Alameda\", \"San Francisco\", \"Contra Costa\", \"Los Angeles\"]\n",
     "\n",
-    "commute, men, women, hispanic = ([],[],[],[])\n",
+    "commute, men, women, hispanic, white, black, native, asian, pacific = ([],[],[],[],[],[],[],[],[])\n",
     "\n",
     "for county in counties:\n",
     "    curr_county = census[census.County == county]\n",
     "\n",
     "    commute.append(curr_county.MeanCommute.median())\n",
-    "    men.append(curr_county.Men.sum())\n",
-    "    women.append(curr_county.Women.sum())\n",
-    "    hispanic.append(((curr_county.Hispanic * curr_county.TotalPop) / 100).sum())\n",
+    "    men.append(curr_county.Men.sum() / 1000)\n",
+    "    women.append(curr_county.Women.sum() / 1000)\n",
+    "    hispanic.append(((curr_county.Hispanic * curr_county.TotalPop) / 100000).sum())\n",
+    "    white.append(((curr_county.White * curr_county.TotalPop) / 100000).sum())\n",
+    "    black.append(((curr_county.Black * curr_county.TotalPop) / 100000).sum())\n",
+    "    native.append(((curr_county.Native * curr_county.TotalPop) / 100000).sum())\n",
+    "    asian.append(((curr_county.Asian * curr_county.TotalPop) / 100000).sum())\n",
+    "    pacific.append(((curr_county.Pacific * curr_county.TotalPop) / 100000).sum())\n",
     "\n",
     "pd.DataFrame({\n",
     "    \"Women\": women,\n",
     "    \"Men\": men,\n",
     "    \"Median Commute\": commute,\n",
-    "    \"Hispanic\": hispanic\n",
+    "    \"Hispanic\": hispanic,\n",
+    "    \"White\": white,\n",
+    "    \"Black\": black,\n",
+    "    \"Native\": native,\n",
+    "    \"Asian\": asian,\n",
+    "    \"Pacific\": pacific\n",
     "}, index=counties)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gender imbalance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
